# mlx-lab

./: CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.prodman/: config.yaml  product.yaml  roadmap.yaml
.prodman/epics/: EP-001.yaml  EP-002.yaml  EP-003.yaml  EP-004.yaml  EP-005.yaml  EP-006.yaml  EP-007.yaml
.prodman/issues/: ISS-001-offline-build-backend-resolution.yaml
.prodman/specs/: SPEC-001.md  SPEC-002.md  SPEC-003.md  SPEC-004.md  SPEC-005.md  SPEC-006.md  SPEC-007.md
docs/: README.md  architecture.md  cli-reference.md  quickstart.md  release-checklist.md
src/mlx_lab/: _version.py  cli.py  data_cleaning.py  run_ops.py  runtime.py  training_lora.py
src/mlx_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mlx_lab/commands/: train.py
tests/: test_data_cleaning.py  test_data_cli.py  test_dataset_cli.py  test_hf_datasets.py  test_hf_models.py  test_model_cli.py  test_release_packaging.py  test_run_cli.py  test_run_ops.py  test_smoke.py  test_train_cli.py  test_training_lora.py
