[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-lab"
version = "0.1.0"
description = "Local-first MLX toolkit for deterministic small-model fine-tuning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "mlx-lab contributors" }]
keywords = ["mlx", "lora", "fine-tuning", "apple-silicon", "machine-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
mlx-lab = "mlx_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
